# AgIsoStack-plus-plus

./: .clang-format  .clang-format-ignore  .cmake-format.yaml  .deepsource.toml  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  doxyfile  generateArduinoLibrary.py  library.json  sonar-project.properties
.devcontainer/: Dockerfile  (+1 more)
examples/diagnostic_protocol/: CMakeLists.txt  README.md  main.cpp
examples/file_server_client/: CMakeLists.txt  main.cpp
examples/guidance/: CMakeLists.txt  main.cpp
examples/hardware_bridge/: CMakeLists.txt  main.cpp
examples/nmea2000/: CMakeLists.txt  main.cpp
examples/nmea2000/fast_packet_protocol/: CMakeLists.txt  main.cpp
examples/nmea2000/nmea2000_generator/: CMakeLists.txt  main.cpp
examples/nmea2000/nmea2000_parser/: CMakeLists.txt  main.cpp
examples/pgn_requests/: CMakeLists.txt  README.md  main.cpp
examples/seeder_example/: BasePool.iop  CMakeLists.txt  main.cpp  object_pool.hpp  section_control_implement_sim.cpp  section_control_implement_sim.hpp  seeder.cpp  seeder.hpp  vt_application.cpp  vt_application.hpp
examples/task_controller_client/: CMakeLists.txt  ddop_definitions.hpp  main.cpp  section_control_implement_sim.cpp  section_control_implement_sim.hpp
examples/task_controller_server/: CMakeLists.txt  console_logger.cpp  main.cpp
examples/transport_layer/: CMakeLists.txt  README.md  main.cpp
examples/virtual_terminal/aux_functions/: CMakeLists.txt  main.cpp  object_pool_ids.h
examples/virtual_terminal/aux_inputs/: CMakeLists.txt  aux_inputs_pooldata.iop  console_logger.cpp  main.cpp
examples/vt_aux_n/: CMakeLists.txt  main.cpp  object_pool_ids.h  vtpooldata.iop
examples/vt_version_3_object_pool/: CMakeLists.txt  VT3TestPool.iop  main.cpp
hardware_integration/: CMakeLists.txt  README.md
hardware_integration/include/: can_hardware_interface.hpp  can_hardware_plugin.hpp  socket_can_interface.hpp
hardware_integration/lib/: README.md
hardware_integration/src/: can_hardware_interface.cpp  can_hardware_interface_single_thread.cpp  canlib_windows_plugin.cpp  flex_can_t4_plugin.cpp  innomaker_usb2can_windows_plugin.cpp  mac_can_pcan_plugin.cpp  mcp2515_can_interface.cpp  ntcan_fifo_plugin.cpp  ntcan_plugin.cpp  pcan_basic_windows_plugin.cpp  peak_ethernet_gateway_plugin.cpp  sil_kit_plugin.cpp  socket_can_interface.cpp  spi_interface_esp.cpp  spi_transaction_frame.cpp  stm32l4x_hal.cpp  sys_tec_windows_plugin.cpp  toucan_vscp_canal.cpp  twai_plugin.cpp  vector_asc_logger.cpp  virtual_can_plugin.cpp  vscan_plugin.cpp
isobus/: CMakeLists.txt
isobus/include/: can_NAME.hpp  can_NAME_filter.hpp  can_address_claim_state_machine.hpp  can_badge.hpp  can_callbacks.hpp  can_constants.hpp  can_control_function.hpp  can_extended_transport_protocol.hpp  can_frame.hpp  can_general_parameter_group_numbers.hpp  can_hardware_abstraction.hpp  can_identifier.hpp  can_internal_control_function.hpp  can_lib_badge.hpp  can_lib_callback.hpp  can_lib_callbacks.hpp  can_lib_configuration.hpp  can_lib_managed_message.hpp  can_lib_parameter_group_numbers.hpp  can_lib_protocol.hpp  can_lib_warning_logger.hpp  can_managed_message.hpp  can_message.hpp  can_network_configuration.hpp  can_network_manager.hpp  can_parameter_group_number_request_protocol.hpp  can_partnered_control_function.hpp  can_protocol.hpp  can_transport_protocol.hpp  can_types.hpp  can_warning_logger.hpp  isobus_diagnostic_protocol.hpp  isobus_file_server_client.hpp  isobus_virtual_terminal_client.hpp
isobus/src/: can_NAME.cpp  can_NAME_filter.cpp  can_address_claim_state_machine.cpp  can_callbacks.cpp  can_control_function.cpp  can_control_function_reference.cpp  can_extended_transport_protocol.cpp  can_frame.cpp  can_identifier.cpp  can_internal_control_function.cpp  can_lib_callbacks.cpp  can_lib_configuration.cpp  can_lib_managed_message.cpp  can_lib_protocol.cpp  can_lib_warning_logger.cpp  can_managed_message.cpp  can_message.cpp  can_message_data.cpp  can_message_frame.cpp  can_message_handling.cpp  can_network_configuration.cpp  can_network_manager.cpp  can_parameter_group_builder.cpp  can_parameter_group_builder.hpp  can_parameter_group_number_request_protocol.cpp  can_partnered_control_function.cpp  can_protocol.cpp  can_stack_logger.cpp  can_transport_protocol.cpp  can_transport_protocol_base.cpp  can_warning_logger.cpp  isobus_data_dictionary.cpp  isobus_device_descriptor_object_pool.cpp  isobus_device_descriptor_object_pool_helpers.cpp  isobus_diagnostic_protocol.cpp  isobus_file_server_client.cpp  isobus_functionalities.cpp  isobus_ground_based_speed.cpp  isobus_guidance_interface.cpp  isobus_heartbeat.cpp  (+24 more)
socket_can/: CMakeLists.txt
socket_can/include/: socket_can_interface.hpp
socket_can/src/: socket_can_interface.cpp
test/: CMakeLists.txt  address_claim_test.cpp  address_claim_tests.cpp  callback_tests.cpp  can_message_tests.cpp  can_name_tests.cpp  cf_functionalities_tests.cpp  core_network_management_tests.cpp  ddop_tests.cpp  diagnostic_protocol_tests.cpp  dm_13_tests.cpp  event_dispatcher_tests.cpp  file_server_client_tests.cpp  guidance_tests.cpp  hardware_interface_tests.cpp  heartbeat_tests.cpp  identifier_tests.cpp  isb_tests.cpp  isobus_data_dictionary_tests.cpp  language_command_interface_tests.cpp  main.cpp  maintain_power_tests.cpp  nmea2000_message_tests.cpp  speed_distance_message_tests.cpp  tc_client_tests.cpp  tc_server_tests.cpp  test_CAN_glue.cpp  test_CAN_glue.hpp  time_date_tests.cpp  transport_protocol_tests.cpp  utility_queue_tests.cpp  utility_span_tests.cpp  virtual_can_plugin_tests.cpp  vt_client_tests.cpp  vt_object_tests.cpp
test/helpers/: control_function_helpers.cpp  control_function_helpers.hpp  messaging_helpers.cpp  messaging_helpers.hpp  test_fixture.hpp  test_time_source.cpp  test_time_source.hpp
utility/: CMakeLists.txt
utility/include/: iop_file_interface.hpp  system_timing.hpp
utility/src/: chrono_time_source.cpp  data_monitor.cpp  iop_file_interface.cpp  platform_endianness.cpp  processing_flags.cpp  system_timing.cpp
(+228 files in other folders)
